--- a/templates/reviewalgo.html
+++ b/templates/reviewalgo.html
@@ -91,7 +91,7 @@ var doanimportantthingearly = [];
 var markataskimmediately = [];
 
 
-$.get("https://www.blackboxo.top/v1/reviewdaydatajson", function(data, status){
+$.get("/v1/reviewdaydatajson", function(data, status){
        // alert("Data: " + data.reviewdata[0].ID + "\nStatus: " + status);
         for(i=0;i<data.reviewdata.length;i++){
              datecategory.push(data.reviewdata[i].date);
