update the reviewalgo html

--- a/templates/reviewalgo.html
+++ b/templates/reviewalgo.html
@@ -160,7 +160,7 @@ option = {
         }
     },
     legend: {
-        data:standard_group
+        data:['Make use of things u have learned','The total score of  number of tasks finished','Start an important thing early']
     },
     toolbox: {
         feature: {
@@ -346,6 +346,8 @@ option = {
         {
             name:'Totalscore',
             type:'line',
+            smooth: true,
+            color:'blue',
             stack: 'total',
             label: {
                 normal: {
