--- a/templates/reviewalgoforios.html
+++ b/templates/reviewalgoforios.html
@@ -161,7 +161,7 @@ option = {
         }
     },
     legend: {
-        data:standard_group
+        data:['Patience with the task']
     },
     toolbox: {
         feature: {
