--- a/templates/reviewalgoforios.html
+++ b/templates/reviewalgoforios.html
@@ -116,7 +116,7 @@ var doanimportantthingearly = [];
 var markataskimmediately = [];
 
 
-$.get("https://www.blackboxo.top/v1/reviewdaydatajsonforios?email=yang756260386@gmail.com"", function(data, status){
+$.get("https://www.blackboxo.top/v1/reviewdaydatajsonforios?email=yang756260386@gmail.com", function(data, status){
        // alert("Data: " + data.reviewdata[0].ID + "\nStatus: " + status);
         for(i=0;i<data.reviewdata.length;i++){
              datecategory.push(data.reviewdata[i].date);
