modify the ios version algorithm

--- a/templates/reviewalgoforios.html
+++ b/templates/reviewalgoforios.html
@@ -185,7 +185,7 @@ option = {
         }
     },
     legend: {
-        data:['Totalscore','MA5','MA10','Make use of things u have learned','The total score of  number of tasks finished','Start an important thing early']
+        data:['Totalscore','MA5','MA10']
     },
     toolbox: {
         feature: {
