--- a/templates/review.html
+++ b/templates/review.html
@@ -149,7 +149,7 @@ myChart.setOption(option = {
             emphasis:{
                 lineStyle:{width:20}
             },
-            label:{show:false,position:"right",rotate:12,fontStyle:'italic',fontSize:15},
+            label:{show:true,position:"right",rotate:12,fontStyle:'italic',fontSize:15},
             lineStyle:{width:1,color:"red",curveness:0.1},
             animationDurationUpdate: 750
 
