modify login page bug and add some code for ios memories  bug

--- a/templates/user.html
+++ b/templates/user.html
@@ -25,7 +25,7 @@
 <div class="form">
   <div class="thumbnail"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/169963/hat.svg"/></div>
   <!-- i use the attibute to not open a new tab https://www.thesitewizard.com/html-tutorial/open-links-in-new-window-or-tab.shtml-->
-  <form class="register-form" action="https://www.blackboxo.top/v1/register"  method="get"  enctype="application/json">
+  <form class="register-form" action="/v1/register"  method="get"  enctype="application/json">
     <input type="text" name="username" placeholder="name"/>
     <input type="password" name="password" placeholder="password"/>
     <input type="text" name="email" placeholder="email address"/>
