--- a/templates/reviewalgo.html
+++ b/templates/reviewalgo.html
@@ -12,9 +12,88 @@
 </head>
 <body>
     <!-- 为ECharts准备一个具备大小（宽高）的Dom -->
-   <div id="main" style="display: inline-block;"></div>
+    <div id="top">
+       
+        <div id="main" style="display: inline-block;" ></div>
+        <div><ul id="demo"></ul></div>
+    </div>
+   <style>
+   #top{
+
+   height:100%  
+}
+   
+   </style>
+
+
+   <script>
+    jQuery.ajaxSetup({async:false});
+    // Set the date we're counting down to
+    var countDownDate = new Date("Jan 5, 2019 15:37:25").getTime();
+    
+    // Update the count down every 1 second
+    var x = setInterval(function() {
+    
+        // Get todays date and time
+        var now = new Date();
+        
+        // Find the distance between now and the count down date
+        var distance = countDownDate - now;
+        
+        // Time calculations for days, hours, minutes and seconds
+        var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+        var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+        var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+        var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+        var hour = now.getHours();
+        var stringhour =  hour.toString();
+        if (stringhour.length<2){
+            stringhour = "0" + stringhour;
+        }
+    
+        
+    
+        var minutes = now.getMinutes();
+    
+         var stringminutes =  minutes.toString();
+        if (stringminutes.length<2){
+            stringminutes = "0" + stringminutes;
+        }
+    
+    
+        var seconds = now.getSeconds();
+    
+           var stringseconds =  seconds.toString();
+        if (stringseconds.length<2){
+            stringseconds = "0" + stringseconds;
+        }
+    
+    
+    
+        // Output the result in an element with id="demo"
+        //document.getElementById("demo").innerHTML = days + "d " + hours + "h "
+        //+ minutes + "m " + seconds + "s ";
+        
+        document.getElementById("demo").innerHTML = stringhour +":"+stringminutes+":"+stringseconds+"s";
+    
+        // If the count down is over, write some text 
+        // if (distance < 0) {
+        //     clearInterval(x);
+        //     document.getElementById("demo").innerHTML = "EXPIRED";
+        // }
+    }, 1000);
+    
+    
+    </script>
+
 
 <script type="text/javascript">
+
+
+
+
+
+
 
 
 function calculateMA(dayCount, data) {
