add goal update part

--- a/templates/goals.html
+++ b/templates/goals.html
@@ -184,7 +184,7 @@ function  getgoaltrees_without_project(){
 return goalsfortree
 }
 
-var data = {"name":"goals","children":getgoaltrees_without_project()}
+var data = {"name":"goals","children":getgoaltrees()}
 doooo(data)
 $( "#noproject" ).click(function() {
 //   alert( "Handler for .click() called." );
