modify echart and remove the number tasks count

--- a/templates/reviewalgo.html
+++ b/templates/reviewalgo.html
@@ -302,13 +302,13 @@ option = {
             data:makeuseofthingsuhavelearned
         },
 
-        {
-            name:'The total score of  number of tasks finished',
-            type:'line',
-            stack: 'number',
-            areaStyle: {},
-            data:thenumberoftasks_score
-        },
+        // {
+        //     name:'The total score of  number of tasks finished',
+        //     type:'line',
+        //     stack: 'number',
+        //     areaStyle: {},
+        //     data:thenumberoftasks_score
+        // },
 
 
 
