--- a/templates/reviewalgo.html
+++ b/templates/reviewalgo.html
@@ -22,7 +22,12 @@
 
    height:100%  
 }
-   
+/* hide  scroll bar */
+/* https://stackoverflow.com/questions/16670931/hide-scroll-bar-but-while-still-being-able-to-scroll */
+::-webkit-scrollbar { 
+    display: none; 
+}
+
    </style>
 
 
