--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,6 @@
 /* Form */
 
-@import url(http://fonts.font.im/css?family=Coming+Soon);
+@import url("https://fonts.googleapis.com/css?family=Coming+Soon&display=swap");
 /* END Form */
 /* Demo Purposes */
 body {
