--- a/templates/goals.html
+++ b/templates/goals.html
@@ -250,8 +250,10 @@ function connect(url) {
     console.log('Socket is closed. Reconnect will be attempted in 1 second.', e.reason);
     setTimeout(function() {
     // connect('ws://localhost:777',player);
-    connect('ws://47.100.100.141:777',player);
-    }, 1000);
+//    connect('ws://47.100.100.141:777',player);
+connect('wss://www.blackboxo.top/wss')  
+
+  }, 1000);
   };
 
   ws.onerror = function(err) {
@@ -261,11 +263,11 @@ function connect(url) {
 }
 
 
-connect('ws://47.100.100.141:777')
+//connect('ws://47.100.100.141:777')
 //    connect('ws://localhost:777')
 
 
-
+connect('wss://www.blackboxo.top/wss') 
 
 
 
@@ -358,7 +360,6 @@ function doooo(datafromserver){
 
             top: '18%',
             bottom: '14%',
-
             layout: 'radial',
 
             symbol: 'pin',
