--- a/templates/reviewalgo.html
+++ b/templates/reviewalgo.html
@@ -9,7 +9,7 @@
     <!-- 引入 echarts.js -->
     <!-- <script src="/v1/echart.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/4.8.0/echarts-en.common.js"></script>
-<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
 </head>
 <body>
     <!-- 为ECharts准备一个具备大小（宽高）的Dom -->
@@ -210,7 +210,15 @@ echarts.init(document.getElementById('main')).dispose()
 var myChart = echarts.init(document.getElementById('main'));
 
 
+function gettoday(){
+    var today = new Date();
+var dd = String(today.getDate()).padStart(2, '0');
+var mm = String(today.getMonth() + 1).padStart(2, '0'); //January is 0!
+var yyyy = today.getFullYear();
 
+today = yyyy.toString().substring(2,4)+mm+dd  ;
+return today
+}
 
 //https://stackoverflow.com/questions/25446628/ajax-jquery-refresh-div-every-5-seconds
 
@@ -227,7 +235,6 @@ var resize = function() {
     window.onresize = function() {
       resize();
     };
-
 
 
 
@@ -290,6 +297,9 @@ var executeablity = [];
 $.get("/v1/reviewdaydatajson", function(data, status){
        // alert("Data: " + data.reviewdata[0].ID + "\nStatus: " + status);
         for(i=0;i<data.reviewdata.length;i++){
+          
+
+
              datecategory.push(data.reviewdata[i].date);
            var obj_detailofreview = JSON.parse(data.reviewdata[i].details);
            totalscore.push(obj_detailofreview.totalscore);
@@ -314,6 +324,8 @@ $.get("/v1/reviewdaydatajson", function(data, status){
          markataskimmediately.push(obj_detailofreview.markataskimmediately);
          buildframeandprinciple.push(obj_detailofreview.buildframeandprinciple);
          acceptfact.push(obj_detailofreview.acceptfact)
+          
+         if (data.reviewdata[i].date===gettoday()){break;}
          
 };    
 
