--- a/templates/taskmanager.html
+++ b/templates/taskmanager.html
@@ -737,7 +737,7 @@ function updatetask(id){
         'id': taskid,
         'place': 'unspecified',
         'finishtime': 'unspecified',
-        'inbox': 'unspecified',
+        'inbox': 'nocontent',
         'project': 'inbox',
         'plantime': 'today',
         'taskstatus': 'finished',
